src/sass/base/_theme-vars.scss
:root {
  /* Light Mode */
  --bg-primary: #f8f4ef;
  --bg-secondary: #e8d8c35c;
  --bg-tertiary: #e8e8e5;
  --bg-service-card: #ffffff;
  --bg-service-hovered: #000000;

  --openToWork-bg: #b3af9424;
  --openToWork-hovered: #d5d5d5c9;

  --stack-link: #e8e8e89a;

  --light-gray-bg: #eeeeeeaf;

  --profile-gradient: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 60%,
    rgba(255, 255, 255, 0) 100%
  );

  --text-primary: #332d25;
  --text-secondary: #695f51;
  --text-tertiary: #988c7d;
  --text-tag: #a2896be6;
  --text-service-hovered: #ffffff;
  --description-service-hovered: #c7c7bb;

  --text-label: #332d25;

  --border-primary: #bebebe;
  --border-secondary: #ccccc7;
  --border-tertiary: #72645229;
  --border-tag: #c2b3a1;
  --border-services: transparent;
  --border-resume: #c7c2bc;

  --shadow-service: rgb(255 255 255 / 39%);

  --button-primary-bg: #332d25;
  --button-primary-text: #ffffff;
  --button-primary-bg-hovered: #2e2e2e;
  --button-primary-disabled-bg: #d4d4d4;
  --button-primary-disabled-text: #808080;
  --cta-button-hover: #504639;

  --surface-hover: #e8e8e5;
  --surface-active: #d9d9d5;

  --accent-soft: #d9d9d5;
  --accent-medium: #b8b8af;
  --accent-strong: #6a6a60;

  --selection-bg: #decdb8bd;

  --text-primary-rgb: 13, 13, 11;
  --text-secondary-rgb: 58, 58, 53;
  --text-tertiary-rgb: 106, 106, 96;
}

.dark {
  /* Dark Mode */
  --bg-primary: #000000;
  --bg-secondary: #151515;
  --bg-tertiary: #1a1a1a;
  --bg-service-card: #000000;
  --bg-service-hovered: #151515;

  --openToWork-bg: #18181bbd;
  --openToWork-hovered: #27272aba;

  --stack-link: #18181b;

  --light-gray-bg: #43434336;

  --profile-gradient: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 60%,
    rgb(0, 0, 0) 100%
  );

  --text-primary: #ffffff;
  --text-secondary: #9f9fa9;
  --text-tertiary: #848484;
  --text-tag: #a1a1a1;

  --text-service-hovered: #ffffff;
  --description-service-hovered: #828282;

  --text-label: #9f9fa9;

  --border-primary: #3a3a3a;
  --border-secondary: #3f3f3f;
  --border-tertiary: #1d1d1d;
  --border-tag: #262626;

  --border-services: #252525;
  --border-resume: #3f3f46;

  --shadow-service: none;

  --button-primary-text: #000000;
  --button-primary-bg: #ffffff;
  --button-primary-bg-hovered: #d2d2d2;
  --button-primary-disabled-bg: #444444a3;
  --button-primary-disabled-text: #646464;
  --cta-button-hover: #bfbfbf;

  --surface-hover: #1f1f1f;
  --surface-active: #2a2a2a;

  --accent-soft: #3f3f3f;
  --accent-medium: #2f2f2f;
  --accent-strong: #a8a8a8;

  --selection-bg: #3f3f3f;
}

